--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /dist/default/production/PIC32MX1_Git.X.production.hex
 /nbproject/Package-default.bash
 /dist/default/production/PIC32MX1_Git.X.production.elf
+/nbproject/private/private.xml
